@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-2503: Make @MonitoredUDF inherited (dvryaboy)
+
 PIG-2488: Move Python unit tests to e2e tests (alangates via daijy)
 
 PIG-2456: Pig should have a pigrc to specify default script cache (prkommireddi via daijy)
